test_suite/tests/ui/fail/misplace_attribute/command_in_struct.stderr
error: expected `fn`
 --> $DIR/command_in_struct.rs:4:1
  |
4 | struct MyStruct;
  | ^^^^^^
